[tool.poetry]
name = "httpx-testing"
version = "0.1.0"
description = ""
authors = ["sacOO7 <sachinshinde7676@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.26.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
